working on responsiveness.  main issue at the moment is tbat tbe collapse toggle icon isnt visible

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,6 +1,7 @@
 /* Index page */
 .navbar {
     background-color: #ffffff;
+    width: 100%;
 }
 
 .navbar-brand {
@@ -15,6 +16,12 @@
 
 .navbar {
     margin-bottom: 50px;
+}
+
+.navbar-toggler {
+    /* background-color: red; */
+    border-color: rgb(255,102,203);
+
 }
 
 body {
